--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ body {
   display: flex;
   flex-direction: column;
   font-family: "Source Sans Pro", "Helvetica Neue", "Segoe UI", Arial, sans-serif;
-  margin: 0;
   min-height: 100%;
 }
 
@@ -27,8 +26,6 @@ h1 {
 }
 
 p {
-  font-size: 24px;
-  font-weight: 300;
   margin: 0 0 0.33em;
 }
 
@@ -42,11 +39,6 @@ a {
   text-decoration: none;
 }
 
-.header-link {
-  color: inherit;
-  text-decoration: none;
-}
-
 .intro-container {
   align-items: center;
   display: flex;
@@ -56,6 +48,11 @@ a {
 
 .intro {
   max-width: 50%;
+}
+
+.intro p {
+  font-size: 24px;
+  font-weight: 300;
 }
 
 .contact {
