--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
   flex-direction: column;
   font-family: "Source Sans Pro", "Helvetica Neue", "Segoe UI", Arial, sans-serif;
   min-height: 100%;
+  text-rendering: optimizeLegibility;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -44,6 +45,7 @@ a {
   display: flex;
   flex-grow: 1;
   justify-content: center;
+  padding: 20px;
 }
 
 .intro {
@@ -64,4 +66,10 @@ a {
 .contact > li {
   display: inline;
   margin-right: 12px;
+}
+
+@media (max-width: 640px) {
+  .intro {
+    max-width: inherit;
+  }
 }
